[package]
name = "gl-sandbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
default = ["egl", "glx", "x11", "wayland", "wgl"]
egl = ["glutin-winit/egl", "png"]
glx = ["glutin-winit/glx"]
wgl = ["glutin-winit/wgl"]
x11 = ["glutin-winit/x11"]
wayland = ["glutin-winit/wayland", "winit/wayland-dlopen", "winit/wayland-csd-adwaita"]


[dependencies]
glutin = { version = "0.30.8", default-features = false}
winit = { version = "0.28.6", default-features = false}
glutin-winit = "0.3.0"
raw-window-handle = "0.5.0"
png = { version = "0.17.6", optional = true }
ab_glyph = "0.2.21"


[build-dependencies]
gl_generator = "0.14"
cfg_aliases = "0.1.1"
